--- a/route-manager/configuration.html
+++ b/route-manager/configuration.html
@@ -97,28 +97,40 @@
         <label>Introduction</label>
         <ul>
             <li><a href="../setup/overview.html">Overview</a></li>
-            <li><a href="../setup/application-process-flow.html">Process Flow</a></li>
-            <li><a href="../setup/folder-structure.html">Folder Structure</a></li>
-            <li><a href="../setup/configuration.html">Configuration</a></li>
-            <li><a href="../setup/app.html">Application Initialization</a></li>
+            <li><a href="../setup/application-process-flow.html">Process
+                    Flow</a></li>
+            <li><a href="../setup/folder-structure.html">Folder
+                    Structure</a></li>
+            <li>
+                <a href="../setup/configuration.html">Configuration</a>
+            </li>
+            <li><a href="../setup/app.html">Application
+                    Initialization</a></li>
         </ul>
     </li>
     <li class="folder">
         <label>Configuration Loader</label>
         <ul>
-            <li><a href="../configuration-loader/overview.html">Overview</a></li>
+            <li><a href="../configuration-loader/overview.html">Overview</a>
+            </li>
             <li><code>@TODO</code></li>
         </ul>
     </li>
     <li class="folder">
         <label>Module System</label>
         <ul>
-            <li><a href="../modules/defining-a-module.html">Defining a Module</a></li>
-            <li><a href="../modules/loading-modules.html">Loading Modules</a></li>
-            <li><a href="../modules/module-path-resolver.html">Module Path Resolver</a></li>
-            <li><a href="../modules/module-config-file.html">Module configuration</a></li>
-            <li><a href="../modules/example-module-config.html">Example Config file</a></li>
-            <li><a href="../modules/module-hooks.html">Module Invokables</a></li>
+            <li><a href="../modules/defining-a-module.html">Defining a
+                    Module</a></li>
+            <li><a href="../modules/loading-modules.html">Loading
+                    Modules</a></li>
+            <li><a href="../modules/module-path-resolver.html">Module
+                    Path Resolver</a></li>
+            <li><a href="../modules/module-config-file.html">Module
+                    configuration</a></li>
+            <li><a href="../modules/example-module-config.html">Example
+                    Config file</a></li>
+            <li><a href="../modules/module-hooks.html">Module
+                    Invokables</a></li>
         </ul>
     </li>
     <li class="folder">
@@ -131,11 +143,14 @@
             </li>
         </ul>
     </li>
+    <li class="separator"><hr /></li>
     <li class="folder">
         <label>RouteManager</label>
         <ul>
-            <li><a href="../route-manager/configuration.html">Configuring Routes</a></li>
-            <li><a href="../route-manager/controllers.html">Controllers</a></li>
+            <li><a href="../route-manager/configuration.html">Configuring
+                    Routes</a></li>
+            <li><a href="../route-manager/controllers.html">Controllers</a>
+            </li>
             <li><a href="../route-manager/handling-404s.html">404
                     Handling</a></li>
         </ul>
@@ -143,12 +158,23 @@
     <li class="folder">
         <label>ServiceManager</label>
         <ul>
-            <li><a href="../service-manager/overview.html">Overview</a></li>
+            <li>
+                <a href="../service-manager/overview.html">Overview</a>
+            </li>
+        </ul>
+    </li>
+
+    <li class="folder">
+        <label>Twig Templates</label>
+        <ul>
+            <li><a href="../twig/twig.html">Overview</a></li>
         </ul>
     </li>
 
 
-    <script>
+</ul>
+
+<script>
     $(document).ready(function () {
         $labels = $('.tree .folder label');
         $labels.click(function () {
@@ -157,12 +183,11 @@
                     .children('ul').toggle(100);
         });
 
-        $labels.each(function(){
+        $labels.each(function () {
             $(this).parent().children('ul').toggle(0)
         });
     });
 </script>
-
 
 
 
@@ -173,19 +198,19 @@
             <div class="col-xs-12 col-sm-9" id="page">
                 
                     <h1>Route Configuration</h1>
-                    <p>Slender core comes with the <strong>route-registrar</strong> module which makes it easy to
+                    <p>Slender core comes with the <strong>route-manager</strong> module which makes it easy to
 set up http routes from within config files.</p>
-<p>RouteRegistrar routing if centered around the idea of <strong>Controllers</strong> and <strong>Actions</strong> that
-you will probably recognise from other frameworks.</p>
-<p><strong>Controllers</strong> are classes that are invoked to handle requests, and <strong>actions</strong> are the methods
-of the controller that should be executed to respond to the request.</p>
-<p>When defining the <strong>controller</strong> to use for a route, it can be either the (FQCN) name of a class
-that should be instantiated, or the identifier of a Factory or Service registered to the IoC
-container.</p>
+<p>RouteManager routing is centered around the idea of <strong>Controllers</strong>
+and <strong>Actions</strong> that you will probably recognise from other frameworks.</p>
+<p><strong>Controllers</strong> are classes that are invoked to handle requests,
+and <strong>actions</strong> are the methods of the controller that should be executed to
+respond to the request.</p>
+<p>When defining the <strong>controller</strong> to use for a route, it can be either the
+(FQCN) name of a class that should be instantiated, or the identifier of a
+Factory or Service registered to the IoC container.</p>
 <p>The <strong>action</strong> method will then be called on the controller instance</p>
 <p><strong>Note:</strong> Route Middleware can&#39;t currently be used with RouteRegistrar due
-          to not being able to write closures in text files.
-          See <a href="route-middleware.html">Route Middleware</a> for more info</p>
+          to not being able to write closures in text files.</p>
 <h2 id="available-properties">Available properties</h2>
 <h3 id="-route-string-"><code>route :String</code></h3>
 <p>The route property defines the url pattern to match</p>
