--- a/setup/application-process-flow.html
+++ b/setup/application-process-flow.html
@@ -171,6 +171,13 @@
         </ul>
     </li>
 
+    <li class="folder">
+        <label>Asset Exposer</label>
+        <ul>
+            <li><a href="../asset-exposer/overview.html">Overview</a></li>
+        </ul>
+    </li>
+
 
 </ul>
 
