--- a/asset-exposer/overview.html
+++ b/asset-exposer/overview.html
@@ -229,7 +229,7 @@ module:
 <h2 id="future">Future</h2>
 <p>I also have plans to roll some sort of optimization tool which would copy,
 symlink, apache alias, apache rewrite or similar to somehow avoid needing
-php to process the assets when in production</p>
+php to process the assets when in production.</p>
 
                 
             </div>
